Web Inspector: Dark Mode: resource search field has white text on white background https://bugs.webkit.org/show_bug.cgi?id=187423
Reviewed by Timothy Hatcher.

Match the colors of sidebar filter fields.

* UserInterface/Views/DarkMode.css:
(@media (prefers-dark-interface)):
(.find-banner > input[type="search"]):


Canonical link: https://commits.webkit.org/202675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233608 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
@@ -1085,6 +1085,11 @@
 
 
     /* FindBanner.css */
+    .find-banner > input[type="search"] {
+        background-color: var(--background-color-alternate);
+        border-color: var(--background-color-selected);
+    }
+
     .find-banner.console-find-banner > input[type=search]:not(:placeholder-shown) {
         color: unset;
         background-color: unset;
